gregoire transparency updated

--- a/child_pages/cc-elections/Candidates/gregoire.html
+++ b/child_pages/cc-elections/Candidates/gregoire.html
@@ -271,7 +271,7 @@
   <br><br>
 
   <div class="gauge-box">
-    <h4 class="sub-heading extra-long">Transparency/Accessibility Rating: A Bit Above Average (trending upwards)</h4>
+    <h4 class="sub-heading extra-long">Transparency/Accessibility Rating: A Bit Above Average (developing)</h4>
     <a href="../../../child_pages/cc-elections/transparency_standards_page.html" target="_blank" rel="noopener noreferrer" class="website-link">
       <button class="candidate-ext-site">Transparency Standards Explained</button>
     </a>
@@ -282,16 +282,28 @@
                 <strong>Explanation</strong>
             </summary>
         <p>
-          Gregoire provided a combined written response and sat-down for an interview that clarified background and priorities—stronger engagement than 
-          the local baseline. He outlines specific, testable ideas (hire an economic lead; city-wide sweeping; improve abandoned-property pipeline; 
-          alternative paths to water-bill collection; suggestion box/email) and ties them to funding concepts (grants/bonds/Clean Communities).
+          Daniel Gregoire remains one of the clearer examples of how community nudging can bring otherwise camera-shy candidates into public view. He has 
+          attended major events such as the Four Seasons Forum and the InformTheVoteNJ Meet & Greet, and was likely present at the Housing Authority event. 
+          He did not attend the recorded Candidates Forum, citing a prior family commitment for his step-daughter—an understandable explanation given the last 
+          minute nature of the event, but still results in 
+          one less opportunity for voters to hear from him directly.
           <br><br>
-
-          To move toward a top-tier transparency rating, we’ll look for: (1) a centralized, consitently-updating web presence; (2) consistent public 
-          availability (events, forums, long-form interviews); (3) concrete, time-bound plans/budgets for staffing/equipment; and (4) follow-through 
-          on communications promises (e.g., documented responses to resident input). Also, with the recent plane banner at the Millville football game, it might be time to make an official ticket 
-          announcement for Sooy, McGinty, and Gregoire. For now, the rating sits at <em>“Above Average 
-            (trending upwards)”</em> based on responsiveness and clear themes laid out early.
+          Gregoire’s cooperation with InformTheVoteNJ—providing written responses and sitting for a camera-less interview— anchors his a bit above average standing. 
+          Those interactions produced tangible, testable proposals: hiring an economic-development lead, improving the abandoned-property pipeline, 
+          experimenting with water-bill collection alternatives, and launching practical neighborhood-clean-up programs. Yet the second half of the 
+          campaign season brought limited public updates. Within the final two-week social-media cutoff window, there was little new information posted, 
+          leaving his message largely frozen in time while more vocal candidates filled the feed.
+          <br><br>
+          This pattern highlights an important tension. Gregoire’s hesitance with cameras amidst a crowded race is hardly unique in Millville politics—but it 
+          illustrates the fragile state of local transparency overall. If citizen-driven projects like InformTheVoteNJ hadn’t been encouraging participation, 
+          would voters have heard much from him at all? Would there have been a centralized meet-and-greet, an interview, or even a campaign Facebook page? 
+          Gregoire’s campaign underscores how dependent voter awareness still is on outside initiative rather than consistent candidate communication.
+          <br><br>
+          Even so, his willingness to answer questions, articulate concrete plans, and maintain a courteous rapport with the press sets him apart from some. 
+          The foundation is there; the next step is embracing thorough visibility as part of the job, not an optional extra.
+          <br><br>
+          Overall rating: A Bit Above Average — cooperative and substantive when engaged, but still emblematic of how Millville’s culture of sometimes modest, 
+          camera-shy campaigning limits the flow of public information.
             </p>
       </details>
   </div>
