cossaboon transparency updated

--- a/child_pages/cc-elections/Candidates/cossaboon.html
+++ b/child_pages/cc-elections/Candidates/cossaboon.html
@@ -314,7 +314,7 @@
      </div>
 
      <div class="gauge-box">
-        <h4 class="sub-heading extra-long">Transparency/Accessibility Rating: Above Average </h4>
+        <h4 class="sub-heading extra-long">Transparency/Accessibility Rating: A Bit Above Average </h4>
         <a href="../../../child_pages/cc-elections/transparency_standards_page.html" target="_blank" rel="noopener noreferrer" class="website-link"><button class="candidate-ext-site">Transparency Standards Explained</button></a>                 
 
         <img class="gauge" src="../../../assets/gauge_okay.svg" alt="">
@@ -324,18 +324,29 @@
             <summary style="color: blue;">
                 <strong>Explanation</strong>
             </summary>
-            As a sitting commissioner, Carole Cossaboon has demonstrated commendable transparency by responding to the candidate questionnaire early in the general election season. This 
-                positions her ahead of the curve in terms of providing voters with clear information about her experience and priorities.
-                <br>
-                <br>
-                That said, this is a crowded race, and significant additional information and public engagement will likely emerge over the next several months. While Commissioner Cossaboon has 
-                been responsive in written format, there has been no indication so far of interest in scheduling a radio interview or a more in-depth podcast closer to the election. These formats 
-                are not mandatory, and candidates have every right to set their own campaign strategies and timing; however, because the opportunity was presented early and no plans were made, 
-                it is important to note that this decision could impact public perception of accessibility later in the season.
-                <br>
-                <br>
-                Overall, the early cooperation and thorough written responses reflect a positive level of transparency, with room to strengthen this further through more live or recorded 
-                public-facing dialogue as the campaign progresses.
+            As a sitting commissioner, Carole Cossaboon began this election cycle with a positive start—promptly completing her InformTheVoteNJ questionnaire 
+            and providing clear written responses outlining her background and priorities. That early cooperation reflected an understanding of the 
+            importance of public access to information and initially placed her ahead of several challengers in terms of basic transparency.
+            <br><br>
+            Throughout the campaign season, Cossaboon maintained a steady community presence. She attended the Four Seasons Forum, the InformTheVoteNJ Meet 
+            & Greet, and likely the Housing Authority event, but did not attend the recorded Candidates Forum. Her Facebook campaign page also appears 
+            largely unchanged from last year’s race. I vaguely remember that she and other candidates have shared additional content 
+            scattered across various Millville community pages, but the burden of scouring those fragmented spaces shouldn’t fall on voters or the press. 
+            By this point in the season, every candidate has had ample opportunity to communicate directly and intentionally through established channels.
+            <br><br>
+            One of the more curious aspects in this campaign is Cossaboon’s possible camera-shyness. While she appears twice a week on public-access broadcasts 
+            from City Hall, she has declined opportunities to offer even brief, informal statements in front of other cameras or at 
+            public events. This reluctance, while not uncommon among local candidates, stands out for an incumbent who could provide invaluable context 
+            about what is actually happening from an incumbent's perspective. In a race where other candidates have participated in detailed interviews and long-form 
+            discussions, Cossaboon’s avoidance of those formats leaves a noticeable information gap.
+            <br><br>
+            As a sitting official, there’s an added expectation that she can articulate not only her own agenda but also explain ongoing projects, decisions, 
+            and departmental goals at a deeper level than new candidates can. When incumbents choose not to engage in that manner, it raises fair questions 
+            about whether transparency is being actively practiced or passively maintained.
+            <br><br>
+            Overall rating: A Bit Above Average (Stable) — cooperative early on and visible at events, but held back by possible camera-shyness and a lack of 
+            updated public communication. As an incumbent, her absence from in-depth formats feels like a missed opportunity to model the level of clarity 
+            and leadership that voters should expect from sitting commissioners.
         </details>
     </div> 
 
