kott transparency update

--- a/child_pages/cc-elections/Candidates/kott.html
+++ b/child_pages/cc-elections/Candidates/kott.html
@@ -167,20 +167,36 @@
     <h4 class="quick-sum">Rating Explanation</h4>
     <h6 class="page-title">Richard Kott</h6>
     <p>
-      Kott has moved from “developing transparency/accessibility” into the gray zone of accessibility and transparency. On one hand, he attended the InformTheVoteNJ meet-n-greet alongside many 
-      other candidates—a clear 
-      positive, since it gave voters and the press a real opportunity to interact directly. He has also committed to attending the upcoming Candidate Forum at the Millville Public Library, 
-      where the format ensures candidates’ answers to issue-based questions will be publicly recorded. That is a distinction from other recent forums in the area where no recording was allowed, 
-      meaning Kott will, by all accounts, have participated in a truly accessible candidate forum. Prior to that he released a campaign video himself, made some statements on his facebook campaign
-      page, and hosted a fundraiser.
+      Rick Kott’s campaign presents one of the more complex cases of this election cycle—a blend of sincere civic engagement and repeated unfulfilled 
+      intentions. On the positive side, Kott has maintained steady visibility throughout the season. He attended the Four Seasons Forum, the InformTheVoteNJ 
+      Meet & Greet, and likely the Housing Authority event, giving voters several opportunities to meet him in person. He also released a campaign video 
+      early on and appeared on The Talk Around Millville radio show with McQuade and Summers, providing at least some publicly accessible content for voters 
+      to hear his perspective directly.
       <br><br>
-      On the other hand, his campaign still lacks a fully comprehensive central website with organized agenda/issue pages. Without the efforts of InformTheVoteNJ to organize and host public events, 
-      voters would be left with limited structured opportunities to hear directly from him. This illustrates a larger reality: the transparency ratings here are not 100% objective—but they do 
-      track how campaigns actually unfold in the real world.
+      However, several patterns over time have weakened the overall transparency picture from this project's perspective. Kott initially expressed strong 
+      enthusiasm for engaging with 
+      InformTheVoteNJ—even stating he would cancel a family event to attend the recorded Candidates Forum out of commitment to public service—only to cancel 
+      the morning of due to a family obligation. While such last-minute changes are understandable, they contribute to a sense of inconsistency, especially 
+      when viewed alongside earlier unfulfilled commitments to complete the InformTheVoteNJ questionnaire and schedule a radio or podcast interview.
       <br><br>
-      For Kott and others, the open question remains the same one that’s been posed to candidates since 2023, where I asked at Bridgeton High School for that year's candidate's forum, something to the 
-      effect of: If elected, how will you ensure that future campaign seasons are structured in a way 
-      that makes transparency and accessibility a given—so voters can easily see which candidates are truly open, responsive, and accountable?  
+      This trend dates back months. A conversation on July 4th captured an early awareness—by both parties—that mail-in ballots would be going out earlier 
+      than many realized, and that timely campaign messaging would be crucial. Despite agreeing that acting sooner rather than later was wise, follow-through 
+      never materialized. As a result, Kott’s publicly accessible messaging now rests primarily on his single campaign video and radio appearance. 
+      While his self-filmed video was a great start, the last minute radio appearance may go unreviewed, even by media outlets like this who simply don't 
+      have the time to stop what they're doing and watch an interview that may not be campaign-focused. That is a general branding comment: InformTheVoteNJ 
+      specifically focuses on elections, other brands are only sometimes focused on elections.
+      <br><br>
+      The result is a candidate who appears earnest, community-minded, and likable, but whose campaign execution doesn’t reflect the level of consistency 
+      expected after five months of open outreach. In isolation, any one of these lapses would be minor. Together, they create a pattern of unforced 
+      errors—moments where good intentions didn’t translate into visible action. When compared to other candidates who have maintained comprehensive 
+      documentation, Kott’s approach leaves gaps that could have been avoided with modest follow-through.
+      <br><br>
+      The broader takeaway extends beyond Kott himself: his campaign embodies the gray zone of Cumberland County politics, where even well-liked and 
+      well-intentioned candidates can drift into inconsistency simply because there’s no cultural framework enforcing transparency as a norm. While Kott’s 
+      presence at events shows genuine effort, his missed opportunities suggest a campaign that relied more on goodwill than clear, organized communication.
+      <br><br>
+      Overall rating: A Bit Above Average (I guess) — personable and community-oriented, but undermined by repeated unfulfilled intentions and missed 
+      opportunities for structured transparency.
       <br><br>
       Click the red x at the top of this box and then scroll down for more in-depth information and sources.
     </p>
