kears transparency updated

--- a/child_pages/cc-elections/Candidates/kears.html
+++ b/child_pages/cc-elections/Candidates/kears.html
@@ -180,20 +180,40 @@
               <h6 class="page-title">Patricia Clark-Kears</h6>
               <p>          
 
-                Patricia Clark-Kears was one of the first Millville candidates this cycle to engage directly, submitting a comprehensive written platform and sitting for a full-length radio 
-                interview. She also committed to a follow-up long-form podcast closer to Election Day. That early willingness to be clear and accessible stood out in a field where many 
-                candidates hesitated.
-                <br>
-                <br>
-                Since then, she has maintained a presence with social media updates and attended the recent InformTheVoteNJ meet n greet—positive steps that show she is making herself available 
-                to voters. She cannot attend the upcoming candidate forum, and that’s understandable given the short notice of its scheduling. But it does highlight a broader reality: even 
-                strong candidates can struggle to consistently hit the “true top-tier” mark for transparency when our local political infrastructure lacks predictable, well-established forums 
-                and expectations.
-                <br>
-                <br>
-                For now, I place her in the “Above Average, trending toward Top-Tier” category. She has already provided more substance and accessibility than many of her peers. If she continues to 
-                follow through on her promised second interview, keeps up regular public visibility, and leans into voter-facing events where possible, it would help raise the status quo regarding 
-                election seasons.
+                Part 1 — How Simple This Could Be
+                <br><br>
+                At the last City Commission meeting before the election, I said to Patricia Clark-Kears: “If everyone had done what you did, I wouldn’t have 
+                to be such a nudge.” That line sums up her campaign approach perfectly. From the first moment of contact, Clark-Kears modeled exactly what 
+                open civic communication should look like. She gave me her contact information the first time I spoke during public comment at City Hall, 
+                returned the completed InformTheVoteNJ questionnaire within a week or so, and recorded her full-length radio interview maybe the following week. 
+                That’s it—no drama, no evasiveness, no delays. If every candidate had followed that same rhythm, there would have been no need for endless 
+                reminders, ad-hoc meet-and-greets, or recorded forums patched together at the last minute by frustrated citizens.
+                <br><br>
+                Clark-Kears’ behavior is proof that transparency doesn’t require consultants or big budgets—it just takes responsiveness and a basic 
+                respect for voters’ time. She has been visibly engaged throughout the season, attending the Four Seasons Forum, the InformTheVoteNJ Meet & 
+                Greet, and likely the Housing Authority event, making herself available in settings where residents could ask direct questions. Her 
+                professionalism and promptness reflect what leading by example looks like in local politics.
+                <br><br>
+                Part 2 — The Fair (and Hard-Edged) View
+                <br><br>
+                That said, a fair evaluation requires stepping back from the personal goodwill she’s earned. Clark-Kears does not maintain a dedicated campaign 
+                website, has not organized her own public meet-and-greet, and did not attend the recorded Candidates Forum. Beyond her radio interview and 
+                questionnaire, there has been limited long-form content documenting her views for voters who want deeper reference material. As mentioned on 
+                another candidate's transparency explanation, perhaps some posts are going around on the Millville group pages, but I'm not going to scour every 
+                nook and cranny of the internet to find every nugget of info... doing it this way takes long enough. To all candidates: if you want the 'press' 
+                to see 'press releases', make sure you send them directly instead of relying on algorithms, shadow-bans, and voters' self-allotted screen-time.
+                <br><br>
+                This raises a legitimate question—the same one posed in Daniel Gregoire’s case: How much publicly accessible information would exist if 
+                InformTheVoteNJ hadn’t attempted to provide a structured process? While Clark-Kears unquestionably responded with integrity and efficiency 
+                when prompted, it’s unclear whether the campaign would have built those same channels on its own. That doesn’t detract from her cooperation, 
+                but it highlights a structural dependence that still defines some Cumberland County races: transparency often happens because someone asks for 
+                it, not because it’s built into the campaign culture.
+                <br><br>
+                In short, Clark-Kears did everything asked of her and did it quickly—something few others managed. But in a truly mature civic environment, 
+                transparency wouldn’t rely on a third-party nudge at all; it would be instinctive and self-initiated.
+                <br><br>
+                Overall rating: Generally Above Average — a model of responsiveness and professionalism within the current framework, but still reflective of 
+                a broader system where transparency often depends on external prompting rather than internal planning.
                 <br>
                 <br>
                 Click the red x at the top of this box and then scroll down down for more in-depth information and sources.
