--- a/child_pages/cc-elections/Candidates/derella.html
+++ b/child_pages/cc-elections/Candidates/derella.html
@@ -142,17 +142,33 @@
               <h6 class="page-title">Joseph Derella</h6>
               <p>          
 
-                We still don’t have any public-facing campaign information from this candidate. As a reminder, InformTheVoteNJ reaches out through the appropriate clerk’s office, basic online 
-                searches, and direct public comments at governmental meetings. A lack of information here should not be interpreted as a lack of effort on our part.
+                Joe Derella, a lifelong Millville resident and 1978 graduate of West Chester University with a degree in Health and Physical Education, 
+                built his early career teaching and coaching at Millville High School before spending more than three decades managing sixteen outpatient 
+                and physical-therapy facilities for NovaCare and later overseeing 500-plus employees in emergency services and occupational health at 
+                Inspira. He retired in 2024 after forty-two years in healthcare and nearly three decades in public service—four years on the school board 
+                (one as president), fifteen as city commissioner (eight as vice mayor and finance director), and nine as county commissioner and director 
+                of administration and public safety. At the county level he served as president of the South Jersey Commissioners Association and vice 
+                president of the New Jersey Association of Counties, building a network that continues to inform his pragmatic, team-based approach to 
+                local governance.
                 <br>
                 <br>
-                This candidate did participate in the recent 4 Seasons candidate forum and offered some substantive remarks. However, at the request of 4 Seasons, we are not permitted to report or 
-                publish details from that event.
+                Derella’s record includes hands-on contributions to Millville’s transformation during the 2000s and 2010s — projects such as the Culver 
+                Center, Levoy Theatre restoration, Buck Park, Union Lake Crossing, and New Jersey Motorsports Park — as well as county initiatives like the 
+                CC Tech School expansion, Rowan College of South Jersey partnership, Veterans Cemetery Pavilion, 911 communications upgrade, and a Positive 
+                Youth Coalition that cut juvenile crime by 40 percent. He points to bipartisan budget committees and long-standing cooperation with Republican 
+                colleagues as proof that attitude and communication matter more than party lines. Now retired, he frames his campaign as a chance to mentor 
+                younger officials and apply that experience to help “make Millville a little bit better.”
                 <br>
                 <br>
-                It is also worth noting that, despite being personally made aware of InformTheVoteNJ’s meet n greet event and receiving a business card directly, this candidate did not attend and 
-                has not followed up. To our knowledge, they also do not plan to participate in the upcoming public forum at the Millville Public Library. Until we receive a platform, website, 
-                interview, or other public campaign materials that can be shared openly, we remain without accessible information to present to voters.
+                His agenda centers on process, safety, and coordinated growth. He proposes a “fix-small-things-first” revitalization of the Arts District — 
+                lighting from Buck to Sixth, clean streets, and visible police during Third Fridays — backed by a monthly merchant roundtable to align needs 
+                and events. He calls for restoring weekly department-head meetings and infrastructure checklists, targeting a 45–55 percent public-safety 
+                budget share, and creating a mental-health and recovery coalition to address homelessness and drug use. On governance, he says Millville’s 
+                rare Walsh Act structure can work if leaders communicate and educate the public before any change. He advocates for community-driven election 
+                forums through nonprofits and churches, a revived marketing plan linking the river, Arts District, Wheaton Arts, and Motorsports Park into a 
+                two-day destination, and a balanced fiscal strategy that protects Millville’s AA bond rating while exploring new revenues like dispensaries 
+                without privatizing core utilities. Across every issue he returns to the same principle: facts, communication, and steady leadership are the 
+                foundation for Millville’s next chapter.
                 <br>
                 <br>
                 Click the red x at the top of this box and then scroll down down for more in-depth information and sources.
@@ -253,44 +269,90 @@
                 <summary style="color: blue;">
                     <strong>Quick Summary</strong>
                 </summary>
-                We still don’t have any public-facing campaign information from this candidate. As a reminder, InformTheVoteNJ reaches out through the appropriate clerk’s office, basic online 
-                searches, and direct public comments at governmental meetings. A lack of information here should not be interpreted as a lack of effort on our part.
+                Joe Derella, a lifelong Millville resident and 1978 graduate of West Chester University with a degree in Health and Physical Education, 
+                built his early career teaching and coaching at Millville High School before spending more than three decades managing sixteen outpatient 
+                and physical-therapy facilities for NovaCare and later overseeing 500-plus employees in emergency services and occupational health at 
+                Inspira. He retired in 2024 after forty-two years in healthcare and nearly three decades in public service—four years on the school board 
+                (one as president), fifteen as city commissioner (eight as vice mayor and finance director), and nine as county commissioner and director 
+                of administration and public safety. At the county level he served as president of the South Jersey Commissioners Association and vice 
+                president of the New Jersey Association of Counties, building a network that continues to inform his pragmatic, team-based approach to 
+                local governance.
                 <br>
                 <br>
-                This candidate did participate in the recent 4 Seasons candidate forum and offered some substantive remarks. However, at the request of 4 Seasons, we are not permitted to report or 
-                publish details from that event.
+                Derella’s record includes hands-on contributions to Millville’s transformation during the 2000s and 2010s — projects such as the Culver 
+                Center, Levoy Theatre restoration, Buck Park, Union Lake Crossing, and New Jersey Motorsports Park — as well as county initiatives like the 
+                CC Tech School expansion, Rowan College of South Jersey partnership, Veterans Cemetery Pavilion, 911 communications upgrade, and a Positive 
+                Youth Coalition that cut juvenile crime by 40 percent. He points to bipartisan budget committees and long-standing cooperation with Republican 
+                colleagues as proof that attitude and communication matter more than party lines. Now retired, he frames his campaign as a chance to mentor 
+                younger officials and apply that experience to help “make Millville a little bit better.”
                 <br>
                 <br>
-                It is also worth noting that, despite being personally made aware of InformTheVoteNJ’s meet n greet event and receiving a business card directly, this candidate did not attend and 
-                has not followed up. To our knowledge, they also do not plan to participate in the upcoming public forum at the Millville Public Library. Until we receive a platform, website, 
-                interview, or other public campaign materials that can be shared openly, we remain without accessible information to present to voters.
+                His agenda centers on process, safety, and coordinated growth. He proposes a “fix-small-things-first” revitalization of the Arts District — 
+                lighting from Buck to Sixth, clean streets, and visible police during Third Fridays — backed by a monthly merchant roundtable to align needs 
+                and events. He calls for restoring weekly department-head meetings and infrastructure checklists, targeting a 45–55 percent public-safety 
+                budget share, and creating a mental-health and recovery coalition to address homelessness and drug use. On governance, he says Millville’s 
+                rare Walsh Act structure can work if leaders communicate and educate the public before any change. He advocates for community-driven election 
+                forums through nonprofits and churches, a revived marketing plan linking the river, Arts District, Wheaton Arts, and Motorsports Park into a 
+                two-day destination, and a balanced fiscal strategy that protects Millville’s AA bond rating while exploring new revenues like dispensaries 
+                without privatizing core utilities. Across every issue he returns to the same principle: facts, communication, and steady leadership are the 
+                foundation for Millville’s next chapter.
             </details>
 
              <div class="election-date">
                  <p>This election is on November 4th, 2025</p>
              </div>
 
-             <!-- <div class="animal-box">
-                <img src="../../../assets/candidates/elephant.png" alt="democrt donkey mascot" class="donkey">
-                <img src="../../../assets/candidates/elephant.png" alt="democrt donkey mascot" class="donkey">
-                <img src="../../../assets/candidates/elephant.png" alt="democrt donkey mascot" class="donkey">
-                <img src="../../../assets/candidates/elephant.png" alt="democrt donkey mascot" class="donkey">
-                <img src="../../../assets/candidates/elephant.png" alt="democrt donkey mascot" class="donkey">
-                <img src="../../../assets/candidates/elephant.png" alt="democrt donkey mascot" class="donkey">
-                <img src="../../../assets/candidates/elephant.png" alt="democrt donkey mascot" class="donkey">
-                <img src="../../../assets/candidates/elephant.png" alt="democrt donkey mascot" class="donkey">
-                <img src="../../../assets/candidates/elephant.png" alt="democrt donkey mascot" class="donkey">
-             </div> -->
+             <div class="animal-box">
+                <img src="../../../assets/candidates/donkey.png" alt="democrt donkey mascot" class="donkey">
+                <img src="../../../assets/candidates/donkey.png" alt="democrt donkey mascot" class="donkey">
+                <img src="../../../assets/candidates/donkey.png" alt="democrt donkey mascot" class="donkey">
+                <img src="../../../assets/candidates/donkey.png" alt="democrt donkey mascot" class="donkey">
+                <img src="../../../assets/candidates/donkey.png" alt="democrt donkey mascot" class="donkey">
+                <img src="../../../assets/candidates/donkey.png" alt="democrt donkey mascot" class="donkey">
+                <img src="../../../assets/candidates/donkey.png" alt="democrt donkey mascot" class="donkey">
+                <img src="../../../assets/candidates/donkey.png" alt="democrt donkey mascot" class="donkey">
+                <img src="../../../assets/candidates/donkey.png" alt="democrt donkey mascot" class="donkey">
+             </div>
          </div>
      </div>
 
-     <!-- <div class="gauge-box">
-        <h4 class="sub-heading extra-long">Transparency/Accessibility Rating: Low </h4>
+     <div class="gauge-box">
+        <h4 class="sub-heading extra-long">Transparency/Accessibility Rating: Average (Legacy Based, I suppose?)</h4>
         <a href="../../../child_pages/cc-elections/transparency_standards_page.html" target="_blank" rel="noopener noreferrer" class="website-link"><button class="candidate-ext-site">Transparency Standards Explained</button></a>                 
 
         <img class="gauge" src="../../../assets/gauge_real_bad.svg" alt="">
-        <button id="rating-exp" class="rating-exp">anecdotal rating explanation</button>
-    </div>  -->
+        <!-- <button id="rating-exp" class="rating-exp">anecdotal rating explanation</button> -->
+         <details class="can-sec" id="transparency-accessibility">
+            <summary style="color: blue;">
+                <strong>Explanation</strong>
+            </summary>
+            <p>
+                Joe Derella is one of the few names in Cumberland County politics that virtually everyone has heard, yet few newer voters have had a clear 
+                chance to learn about. A longtime public figure and former county commissioner, he brings decades of experience and familiarity within 
+                established political circles. But that same longevity seems to have bred a comfort with traditional outreach methods that simply don’t 
+                meet the informational standards expected today.
+                <br><br>
+                Derella attended the Four Seasons Forum and likely the Housing Authority event, but he did not participate in the InformTheVoteNJ Meet & Greet, 
+                one of the most widely accessible public events of the season. He did, however, take part in the recorded Candidates Forum, which deserves 
+                credit—very few candidates made that extra effort. Still, he has no active campaign website, no visible social-media presence (he has stated 
+                openly that he doesn’t use it much), and no easily searchable interviews or detailed written platform available online (aside from ours based 
+                on the candidate's forum).
+                <br><br>
+                This creates a stark divide between those already in the know and those trying to catch up. For residents who have followed local politics 
+                for years, Derella’s record and reputation may speak for themselves. But for relative newcomers—or for voters who want to independently 
+                verify information—the lack of centralized, public-facing material leaves a vacuum. The first and only time many voters could hear him 
+                discuss current issues directly was at the Four Seasons Forum, which organizers prohibited from being recorded. The irony is hard to miss: 
+                the one moment where fresh eyes could finally hear him speak, the information was locked behind the walls of a private event.
+                <br><br>
+                Derella’s case illustrates the structural gap in Millville and Cumberland County politics. When seasoned public officials rely on legacy 
+                name recognition and offline conversations, newer residents and reform-minded voters are effectively shut out of the learning process. 
+                Transparency should not depend on having been “around long enough” to know the players. In 2025, accessibility requires searchable records, 
+                shareable media, and a consistent willingness to appear in public, recorded formats.
+                <br><br>
+                Overall rating: Average (Stable) — well-known and locally established, but with minimal current digital or documented transparency. In an era 
+                where information equity defines civic participation, Derella’s campaign approach keeps newcomers eerily close to being on the outside looking in.
+                </p>
+    </div> 
 
      
             
