--- a/child_pages/cc-elections/Candidates/derella.html
+++ b/child_pages/cc-elections/Candidates/derella.html
@@ -320,7 +320,7 @@
         <h4 class="sub-heading extra-long">Transparency/Accessibility Rating: Average (Legacy Based, I suppose?)</h4>
         <a href="../../../child_pages/cc-elections/transparency_standards_page.html" target="_blank" rel="noopener noreferrer" class="website-link"><button class="candidate-ext-site">Transparency Standards Explained</button></a>                 
 
-        <img class="gauge" src="../../../assets/gauge_real_bad.svg" alt="">
+        <img class="gauge" src="../../../assets/gauge_dead_center.svg" alt="">
         <!-- <button id="rating-exp" class="rating-exp">anecdotal rating explanation</button> -->
          <details class="can-sec" id="transparency-accessibility">
             <summary style="color: blue;">
